iPhone 5 and smaller fix (according to sizzy.co h1 overflows)

--- a/styles/02-basic/typography.sass
+++ b/styles/02-basic/typography.sass
@@ -7,6 +7,8 @@ html
 	font-size: 16px
 	@media screen and(max-width: $break-small)
 		font-size: 18px
+	@media screen and(max-width: $break-very-small)
+		font-size: 16px
 body
 	font-family: 'Muli', sans-serif
 	font-kerning: normal
